--- a/ziyong.yml
+++ b/ziyong.yml
@@ -25,15 +25,16 @@ dns:
     - 'www.msftncsi.com'
     - 'www.msftconnecttest.com'
   nameserver:
-    - 223.5.5.5 # 阿里DNS
-    - tls://dns.rubyfish.cn:853
-  fallback:
-    - tls://1.0.0.1:853
-    - tls://dns.google:853
-  fallback-filter:
-    geoip: true
-    ipcidr:
-    - 240.0.0.0/4
+    - 1.1.1.1
+#    - 223.5.5.5 # 阿里DNS
+#    - tls://dns.rubyfish.cn:853
+#  fallback:
+#    - tls://1.0.0.1:853
+#    - tls://dns.google:853
+#  fallback-filter:
+#    geoip: true
+#    ipcidr:
+#    - 240.0.0.0/4
 
 proxies:
 
